RESOLVED FIXED200309
[ContentChangeObserver] twitch.tv video controls do not always respond to taps in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=200309
Summary [ContentChangeObserver] twitch.tv video controls do not always respond to tap...
alan
Reported 2019-07-31 11:45:53 PDT
Attachments
Patch (7.37 KB, patch)
2019-07-31 11:55 PDT, alan
no flags
Patch (8.30 KB, patch)
2019-07-31 13:02 PDT, alan
no flags
Patch (7.66 KB, patch)
2019-07-31 14:05 PDT, alan
no flags
alan
Comment 1 2019-07-31 11:55:55 PDT
Simon Fraser (smfr)
Comment 2 2019-07-31 12:44:05 PDT
Comment on attachment 375232 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375232&action=review > Source/WebCore/page/ios/ContentChangeObserver.cpp:108 > + if (auto* activeFullscreenElement = fullscreenElement(node.document())) > + return !node.isDescendantOf(*activeFullscreenElement); This doesn't handle the case of a subframe inside a fullscreen element.
alan
Comment 3 2019-07-31 13:02:25 PDT
alan
Comment 4 2019-07-31 14:05:43 PDT
WebKit Commit Bot
Comment 5 2019-07-31 16:01:48 PDT
Comment on attachment 375241 [details] Patch Clearing flags on attachment: 375241 Committed r248080: <https://trac.webkit.org/changeset/248080>
WebKit Commit Bot
Comment 6 2019-07-31 16:01:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.