Cherry-pick r248080. rdar://problem/53788956

[ContentChangeObserver] twitch.tv video controls do not always respond to taps in fullscreen
    https://bugs.webkit.org/show_bug.cgi?id=200309
    <rdar://problem/52964977>

    Reviewed by Simon Fraser.

    Source/WebCore:

    Do not consider an element visible if it is not a descendant of the active fullscreen element.

    This patch fixes the cases when the user taps on a button in fullscreen mode while the non-fullscreen content is being mutated and
    the ContentChangeObserver mistakenly registers it as a valid, actionable change and as a result we don't fire the click event (stay at hover).

    Test: fast/events/touch/ios/content-observation/non-visible-content-change-in-fullscreen-mode.html

    * page/ios/ContentChangeObserver.cpp:
    (WebCore::fullscreenElement):
    (WebCore::ContentChangeObserver::isVisuallyHidden):

    LayoutTests:

    * fast/events/touch/ios/content-observation/non-visible-content-change-in-fullscreen-mode-expected.txt: Added.
    * fast/events/touch/ios/content-observation/non-visible-content-change-in-fullscreen-mode.html: Added.
    * platform/ios/TestExpectations: Fullscreen API is not yet enabled on iOS.

    Canonical link: https://commits.webkit.org/214106@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248080 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.166@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248093 268f45cc-cd09-0410-ab3c-d52691b4dbfc